--- a/package.json
+++ b/package.json
@@ -2,13 +2,18 @@
   "name": "finance",
   "version": "0.1.0",
   "private": true,
+  "description": "Finance management system",
+  "author": "Siarhei Savitski <sv.siarhei@gmail.com>",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-responsive-carousel": "^3.2.22",
     "react-scripts": "5.0.0",
+    "reactstrap": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
